--- a/style.css
+++ b/style.css
@@ -110,18 +110,20 @@ h1 {
 }
 
 
-img{
-    height: auto;
-width: 400px;
-border-radius: 3px;
+img{ display: block;
+max-width: 100%;
+max-height: 100%;
+border-radius: 5px;
 overflow: hidden;
 transition: .5s;
 }
 
 
-.card{
-    height: 500px;
-    margin: 50px;
+.card{ display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    margin: 14px;
     box-shadow:5px 5px 20px black;
 overflow: hidden;
 border-radius: 10px;
@@ -136,12 +138,10 @@ border-radius: 10px;
    
 }
 
-.intro{
-    height: 15px;
-    width: 400px;
+.intro{ display: inline-block;
+    position: absolute;
     padding: 6px;
     box-sizing: border-box;
-    position: absolute;
     color:  white;
     bottom: -248px;
     transition: .3s;
