--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ transition: .5s;
 .card{ display: flex;
     width: 100%;
     height: 100%;
-    justify-content: space-between;
+    justify-content: center;
     margin: 14px;
     box-shadow:5px 5px 20px black;
 overflow: hidden;
