--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ h1 {
 }
 
 
-img{ display: block;
+img{ display: inline-block;
 max-width: 100%;
 max-height: 100%;
 border-radius: 5px;
@@ -120,10 +120,10 @@ transition: .5s;
 
 
 .card{ display: flex;
+    justify-content: center;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    margin: 14px;
+    margin: 5px;
     box-shadow:5px 5px 20px black;
 overflow: hidden;
 border-radius: 10px;
@@ -138,10 +138,11 @@ border-radius: 10px;
    
 }
 
-.intro{ display: inline-block;
+.intro{ display: flex;
+    box-sizing:border-box;
+    justify-content: center;
     position: absolute;
     padding: 6px;
-    box-sizing: border-box;
     color:  white;
     bottom: -248px;
     transition: .3s;
@@ -149,9 +150,12 @@ border-radius: 10px;
     visibility: hidden;
     background-color: rgba(29,30,34, 0.8);
     border-radius: 10px ;
-    
-
 }
+
+.intro h2, p { display: block;
+}
+
+
 h2{
     margin: 5px;
     font-size:  20px;
