--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h1 {
 	margin: 30px;
 }
 
-.row{
+.row{ 
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -231,7 +231,7 @@ transition: 0.6s;
 
 /*termino de card css*/
 
-.box-3 {
+.box-3 { 
     padding: 20px;
     border-radius: 15px;
     margin-top: 100px;
@@ -241,4 +241,18 @@ transition: 0.6s;
     width: 200px;
     margin: 50px auto;
     border: 25px;
+}
+
+.box-4{
+
+        padding: 20px;
+        border-radius: 15px;
+        margin-top: 100px;
+        margin-bottom: 70px;
+        font-size: 18px;
+        background-color: rgba(29,30,34, 0.8);
+        width: 4000px;
+        margin: 10px;
+        border: 25px;
+    
 }
